--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 	<title>КриоДаб</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
-	<link rel="stylesheet" type="text/css" href="test.css">
 	<link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
+	<meta name="author" content="Никита Шаньгин/MrKrio">
+	<meta name="copyright" content="Все права принадлежат Никите Шаньгину, воспроизведение любого материала с этой страницы на других ресурсах должно быть согласовано в правообладателем">
+	<meta name="robots" content="index, nofollow">
+	<meta http-equiv="content-language" content="ru">
+	<meta name="description" content="Сайт студии KrioDub. Хотите заказать озвучку для вашего видео, поздравление, рекламный ролик? Хотите увидеть озвученную серию вашего любимого сериала, аниме, мультсериала? Тогда вам сюда!">
+	<meta name="keywords" content="озвучка рекламных роликов, видеомонтаж, озвучивание, заказать озвучивание, смотреть аниме, смотреть мультфильмы, время приключений, гравити фоллз, adventure time">
 </head>
 <body>
 
