--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="robots" content="index, nofollow">
 	<meta http-equiv="content-language" content="ru">
 	<meta name="description" content="Сайт студии KrioDub. Хотите заказать озвучку для вашего видео, поздравление, рекламный ролик? Хотите увидеть озвученную серию вашего любимого сериала, аниме, мультсериала? Тогда вам сюда!">
-	<meta name="keywords" content="озвучка рекламных роликов, видеомонтаж, озвучивание, заказать озвучивание, смотреть аниме, смотреть мультфильмы, время приключений, гравити фоллз, adventure time">
+	<meta name="keywords" content="Kriodub, krio dub, Криодаб, крио даб, озвучка рекламных роликов, видеомонтаж, озвучивание, заказать озвучивание, смотреть аниме, смотреть мультфильмы, время приключений, гравити фоллз, adventure time">
 </head>
 <body>
 
