--- a/index.html
+++ b/index.html
@@ -14,5 +14,29 @@
 </head>
 <body>
 
+<div id="container">
+<header>
+	<b id="headerer"><a href="#">KRIODUB</a></b>
+	
+	<div id="head1">
+		<ul id="header">
+			<li class="hdr"><a href="#">Главная</a></li>
+			<li class="hdr"><a href="#">Озвучки</a></li>
+			<li class="hdr"><a href="#">Заказать озвучку</a></li>
+			<li class="hdr"><a href="#">FAQ</a></li>
+		</ul>
+	</div>
+</header>
+
+<div id="banner"></div>
+
+<div id="content">
+	<p> Content
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero consectetur ea, ex facere dolor provident!</p>
+</div>
+
+</div>
+
+
 </body>
 </html>
